unpackaged/main/default/objects/ucinn_ascendv2__Designation__c/ucinn_ascendv2__Designation__c.object-meta.xml
<CustomObject>
    <description>The department/unit/fund where the donation will be going to.</description>
    <label>Designation</label>
    <nameField>
        <label>Designation Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Designations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>