unpackaged/main/default/objects/ucinn_ascendv2__Designation__c/fields/NU_ADV_CC_Academics__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_CC_Academics__c</fullName>
    <label>Academics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>bouve-college-of-health-sciences</fullName>
                <label>Bouve College of Health Sciences</label>
            </value>
            <value>
                <fullName>college-of-arts-media-and-design</fullName>
                <label>College of Arts, Media, and Design</label>
            </value>
            <value>
                <fullName>college-of-engineering</fullName>
                <label>College of Engineering</label>
            </value>
            <value>
                <fullName>college-of-professional-studies</fullName>
                <label>College of Professional Studies</label>
            </value>
            <value>
                <fullName>college-of-science</fullName>
                <label>College of Science</label>
            </value>
            <value>
                <fullName>college-of-social-sciences-and-humanities</fullName>
                <label>College of Social Sciences and Humanities</label>
            </value>
            <value>
                <fullName>damore-mckim-school-of-business</fullName>
                <label>D’Amore McKim School of Business</label>
            </value>
            <value>
                <fullName>mills-college-at-northeastern</fullName>
                <label>Mills College at Northeastern</label>
            </value>
            <value>
                <fullName>khoury-college-of-computer-sciences</fullName>
                <label>Khoury College of Computer Sciences</label>
            </value>
            <value>
                <fullName>school-of-law</fullName>
                <label>School of Law</label>
            </value>
            <value>
                <fullName>university-library</fullName>
                <label>University Library</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>