unpackaged/main/default/objects/ucinn_ascendv2__Designation__c/fields/NU_ADV_CC_Interests__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_CC_Interests__c</fullName>
    <label>Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>academic-enrichment</fullName>
                <label>Academic Enrichment</label>
            </value>
            <value>
                <fullName>advocacy</fullName>
                <label>Advocacy</label>
            </value>
            <value>
                <fullName>area-of-greatest-need</fullName>
                <label>Area of Greatest Need</label>
            </value>
            <value>
                <fullName>athletics-club-sports-and-recreation</fullName>
                <label>Athletics – Club Sports &amp; Recreation</label>
            </value>
            <value>
                <fullName>athletics-varsity</fullName>
                <label>Athletics – Varsity</label>
            </value>
            <value>
                <fullName>business</fullName>
                <label>Business</label>
            </value>
            <value>
                <fullName>community-impact</fullName>
                <label>Community Impact</label>
            </value>
            <value>
                <fullName>competition-and-skilled-based</fullName>
                <label>Competition and Skilled Based</label>
            </value>
            <value>
                <fullName>creative-and-visual-arts</fullName>
                <label>Creative and Visual Arts</label>
            </value>
            <value>
                <fullName>cultural</fullName>
                <label>Cultural</label>
            </value>
            <value>
                <fullName>diversity-equity-inclusion</fullName>
                <label>Diversity, Equity, and Inclusion</label>
            </value>
            <value>
                <fullName>financial-aid-and-scholarship</fullName>
                <label>Financial Aid &amp; Scholarship</label>
            </value>
            <value>
                <fullName>fraternity-sorority</fullName>
                <label>Fraternity/Sorority</label>
            </value>
            <value>
                <fullName>global-opportunities</fullName>
                <label>Global Opportunities</label>
            </value>
            <value>
                <fullName>health-wellness</fullName>
                <label>Health &amp; Wellness</label>
            </value>
            <value>
                <fullName>international</fullName>
                <label>International</label>
            </value>
            <value>
                <fullName>leadership</fullName>
                <label>Leadership</label>
            </value>
            <value>
                <fullName>outdoor-adventure</fullName>
                <label>Outdoor Adventure</label>
            </value>
            <value>
                <fullName>performing-arts</fullName>
                <label>Performing Arts</label>
            </value>
            <value>
                <fullName>philanthropic-and-community-engagement</fullName>
                <label>Philanthropic and Community Engagement</label>
            </value>
            <value>
                <fullName>political-action</fullName>
                <label>Political Action</label>
            </value>
            <value>
                <fullName>print-and-broadcast-media</fullName>
                <label>Print and Broadcast Media</label>
            </value>
            <value>
                <fullName>religious-and-spiritual</fullName>
                <label>Religious and Spiritual</label>
            </value>
            <value>
                <fullName>science-technology</fullName>
                <label>Science &amp; Technology</label>
            </value>
            <value>
                <fullName>special-interest</fullName>
                <label>Special Interest</label>
            </value>
            <value>
                <fullName>spiritual-life</fullName>
                <label>Spiritual Life</label>
            </value>
            <value>
                <fullName>student-organizations</fullName>
                <label>Student Organizations</label>
            </value>
            <value>
                <fullName>sustainability-environment</fullName>
                <label>Sustainability</label>
            </value>
            <value>
                <fullName>women-at-northeastern</fullName>
                <label>Women at Northeastern</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>