unpackaged/main/default/objects/ucinn_ascendv2__Designation__c/fields/NU_ADV_CC_Priorities__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_CC_Priorities__c</fullName>
    <label>Priorities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>diverse-and-inclusive-communities</fullName>
                <label>Diverse and Inclusive Communities</label>
            </value>
            <value>
                <fullName>entrepreneurship</fullName>
                <label>Entrepreneurship</label>
            </value>
            <value>
                <fullName>faculty-excellence</fullName>
                <label>Faculty Excellence</label>
            </value>
            <value>
                <fullName>global-exploration</fullName>
                <label>Global Exploration</label>
            </value>
            <value>
                <fullName>research</fullName>
                <label>Research</label>
            </value>
            <value>
                <fullName>student-opportunities</fullName>
                <label>Student Opportunities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>