unpackaged/main/default/objects/ucinn_ascendv2__Designation__c/fields/NU_ADV_Fund_Status__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Fund_Status__c</fullName>
    <label>Fund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>