unpackaged/main/default/objects/ucinn_ascendv2__Designation__c/fields/NU_ADV_Open_for_Gifts__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Open_for_Gifts__c</fullName>
    <label>Open for Gifts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>