unpackaged/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Giving_URL__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Giving_URL__c</fullName>
    <label>Giving URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>