unpackaged/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Testimonial__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Testimonial__c</fullName>
    <label>Testimonial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>