unpackaged/main/default/objects/ucinn_ascendv2__Designation__c/recordTypes/NU_ADV_Designation.recordType-meta.xml
<RecordType>
    <fullName>NU_ADV_Designation</fullName>
    <active>true</active>
    <description>Financial Designations</description>
    <label>Designation</label>
</RecordType>