unpackaged/main/default/objects/ucinn_ascendv2__Designation__c/recordTypes/NU_ADV_Placeholder_Designation.recordType-meta.xml
<RecordType>
    <fullName>NU_ADV_Placeholder_Designation</fullName>
    <active>true</active>
    <description>For placeholder designations</description>
    <label>Placeholder Designation</label>
</RecordType>