unpackaged/main/default/objects/ucinn_ascendv2__Designation__c/listViews/Mills_Designations_List.listView-meta.xml
<ListView>
    <fullName>Mills_Designations_List</fullName>
    <columns>ucinn_ascendv2__Status_Formula__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Designation_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>ucinn_ascendv2__CASE_Purpose_v1__c</columns>
    <columns>NU_ADV_Benefitting_Department__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NU_ADV_External_Key__c</columns>
    <columns>Historic_Designation_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NU_ADV_External_Key__c</field>
        <operation>contains</operation>
        <value>Mills</value>
    </filters>
    <label>Mills Designations List</label>
</ListView>